unidoc, fix error in tests